Fix several small issues
These weren't all (arguably) minor; several fixed uses of deprecated methods, and some fixed potential resource leaks. Still, they were all small and easy to fix.